prevent brief flickering of "broken image" on tile loading errors

--- a/css/80_app.css
+++ b/css/80_app.css
@@ -4366,6 +4366,11 @@ img.tile {
 
     opacity: 1;
     transition: opacity 120ms linear;
+
+    /* prevent brief flickering of "broken image" on tile loading errors, see https://zeldman.com/2012/03/01/replacing-the-9999px-hack-new-image-replacement/ */
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 img.tile-removing {
